# celai-chatwoot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
celai_chatwoot/connector/: __init__.py  bot_utils.py  msg_utils.py  woo_connector.py
celai_chatwoot/connector/model/: __init__.py  woot_attachment.py  woot_lead.py  woot_message.py
celai_chatwoot/connector/sample_data/: incoming_img_msg_from_web.json  incoming_text_msg_from_web.json
examples/: callback_test.py  test.py
tests/: messages_test.py
tests/data/: incoming_audio_msg.json  incoming_audio_msg_tg.json  incoming_file_msg_tg.json  incoming_img_msg_from_web.json  incoming_location_tg.json  incoming_text_msg_from_web.json
