[tool.poetry]
name = "celai-chatwoot"
version = "0.1.6"
description = ""
authors = ["Alex Martin <alejamp@gmail.com>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "celai_chatwoot" }
]

[tool.poetry.urls]
Homepage = "https://github.com/cel-ai/celai-chatwoot"
Issues = "https://github.com/cel-ai/celai-chatwoot/issues"

[tool.poetry.dependencies]
#Runtime
python = "^3.11"
# Dependencies for the project:
celai = "^0.1.14"
aiohttp = ">=3.9.5"
filetype = ">=1.2.0"


[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0"
pytest-asyncio = ">=0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]